...
            onPressed: () {
              var controller = PrimaryScrollController.of(context);
              controller!.animateTo(0,
                  duration: Duration(seconds: 2), curve: Curves.ease);
            },
            child: Icon(Icons.arrow_upward),
            key: Key('listFloatingButton'),
          ),
          appBar: AppBar(
            backgroundColor: Colors.white,
            foregroundColor: Colors.black,
            title: Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: const [
                //Icon(Icons.photo_album),
                //SizedBox(width: 10),
                Text('List of photos')
              ],
            ),
          ),
          body: BlocBuilder<HomeBloc, HomeState>(
            builder: ((context, state) {
              if (state is HomeLoadingState) {
...
